# maisabpo

./: CMakeLists.txt  maisabpo.sln
maisabpo-lab1/: binary_output.cpp  binary_output.h  lab1-1.cpp  maisabpo-lab1.vcxproj  maisabpo-lab1.vcxproj.filters
maisabpo-lab1-1/: CMakeLists.txt  binary_output.cpp  binary_output.hpp  lab1-1.cpp
maisabpo-lab1-2/: CMakeLists.txt  bin_ops.cpp  bin_ops.h  bin_ops.hpp  bop.h  lab1-2.cpp  main.cpp  maisabpo-lab1-2.vcxproj  maisabpo-lab1-2.vcxproj.filters
maisabpo-lab1-3/: CMakeLists.txt  main.cpp
maisabpo-lab1-4/: CMakeLists.txt  main.cpp  pnums.cpp  pnums.hpp
maisabpo-lab1-5/: CMakeLists.txt  bnum.cpp  bnum.hpp  main.cpp  strategy.md
utils/: CMakeLists.txt  mutl.cpp  mutl.hpp  utils.cpp  utils.hpp
